src/app/layouts/public-layout/public-layout.component.scss
.main{ position:relative; min-height: calc(100vh - 72px); padding-top: 18px; }
.float{
  position: fixed;
  right: 24px;
  width: 64px; 
  height: 64px;
  border-radius: 999px;
  border: 0;
  display:flex; 
  align-items:center; 
  justify-content:center;
  background: #fff;
  box-shadow: var(--shadow);
  cursor:pointer;
  transition: transform 0.3s;
}
.float:hover{
  transform: scale(1.1);
}
.float img{
  width: 36px; 
  height: 36px;
}
.bot{ 
  bottom: 20px;
  background: transparent;
  box-shadow: none;
  border-radius: 16px;
  padding: 0;
  overflow: hidden;
  border: none;
}
.bot img{
  width: 100%;
  height: 100%;
  object-fit: contain;
}

@media (max-width: 640px){
  .float{
    width: 56px;
    height: 56px;
    right: 16px;
  }
  .float img{
    width: 30px;
    height: 30px;
  }
  .bot{
    bottom: 140px;
    width: 56px;
    height: 56px;
  }
  .bot img{
    width: 100%;
    height: 100%;
  }
}

